--- a/2ndTry.html
+++ b/2ndTry.html
@@ -3,12 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Practice Millestone-2</title>
+    <title>Playing Badminton</title>
+    <style>
+        .field {
+            height: 300px;
+            width: 800px;
+            border: 1px solid;
+        }
 
+        .field:hover .badminton {
+            transform: rotate(-35deg);
+        }
+    </style>
 </head>
 
 <body>
-
+    <div class="field">
+        <div class="badminton">
+            <img src="badminton.jpg" alt="single badminton">
+        </div>
+    </div>
 </body>
 
 </html>
